--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PersonasActivity"></activity>
+        <activity android:name=".PersonasDetalleActivity"></activity>
+        <activity android:name=".PersonasActivity" />
         <activity android:name=".MenuActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
