--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    implementation("com.squareup.okhttp3:okhttp:4.2.1")
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 }
