--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sanbar.gestor">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".PodDetalleFinalizarTareaActivity" />
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <activity android:name=".PodInterrupcionResponsableActivity" />
+        <activity android:name=".PodInterrupcionTerminoActivity"/>
+        <activity android:name=".PodInterrupcionCausaActivity" />
+        <activity android:name=".PodFinalizarTareaActivity" />
         <activity android:name=".ContratoActivity" />
         <activity android:name=".PodDetalleActivity" />
         <activity android:name=".PodActivity" />
@@ -27,6 +35,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
     </application>
 
 </manifest>
