--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation("com.squareup.okhttp3:okhttp:4.2.1")
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
