--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".DashboardActivity"></activity>
         <activity android:name=".PodInterrupcionResponsableActivity" />
-        <activity android:name=".PodInterrupcionTerminoActivity"/>
+        <activity android:name=".PodInterrupcionTerminoActivity" />
         <activity android:name=".PodInterrupcionCausaActivity" />
         <activity android:name=".PodFinalizarTareaActivity" />
         <activity android:name=".ContratoActivity" />
@@ -35,9 +35,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
     </application>
 
 </manifest>
