--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".DashboardActivity"></activity>
+
+        <activity
+            android:name=".DashboardActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
         <activity android:name=".PodInterrupcionResponsableActivity" />
         <activity android:name=".PodInterrupcionTerminoActivity" />
         <activity android:name=".PodInterrupcionCausaActivity" />
