--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".LayoutActivity"></activity>
         <activity
             android:name=".DashboardActivity"
-            android:label="@string/app_name"
-            >
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity android:name=".PodInterrupcionResponsableActivity" />
         <activity android:name=".PodInterrupcionTerminoActivity" />
         <activity android:name=".PodInterrupcionCausaActivity" />
